--- a/css/style.css
+++ b/css/style.css
@@ -27,22 +27,33 @@ body{
 }
 
 nav{
+    
     display: flex;
-    width: 100vw;
+    width: 90vw;
     height: 100px;
     align-items: center;
     font-size: 18px;
     font-weight: 600;
     
+    
+    
 }
 
 nav > ul{
-    display: flex;
+   /*   display: flex;
     align-items: center;
     justify-content: center;
     width: 100vw;
     height: 37px;
     gap: 240px;
+    */
+    
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    margin-right: 520px;
+    padding: 90px;
+    font-size: 16px;
 
     
 }
