--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&display=swap');
+@import url(mediaquery.css);
 
 :root{
     --color-darkblue: #001f3f;
@@ -27,11 +28,12 @@ body{
 }
 
 nav{
-    
+   
     display: flex;
-    width: 90vw;
+    width: 700px;
     height: 100px;
-    align-items: center;
+   margin: auto;
+   align-items: center;
     font-size: 18px;
     font-weight: 600;
     
@@ -40,17 +42,11 @@ nav{
 }
 
 nav > ul{
-   /*   display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 37px;
-    gap: 240px;
-    */
-    
-    display: flex;
     width: 100%;
-    gap: 20px;
+    gap: 30px;
     margin-right: 520px;
     padding: 90px;
     font-size: 16px;
@@ -118,7 +114,7 @@ nav >  a button:hover{
 .sec-bg > .name{
     display: flex;
     flex-direction: column;
-    margin-right: 850px;
+    margin-right: 800px;
     align-items: center;
 
 }
@@ -163,9 +159,10 @@ nav >  a button:hover{
 
 
 .sec-bg > img{
-
+    
     width: 400px;
     border-radius: 50%;
+    
 }
 
 .sec-bg > .name > .redes{
@@ -174,6 +171,7 @@ nav >  a button:hover{
 
 .sec-bg > .name > .redes a img{
     
+   
     margin-right: 15px;
    
     
@@ -348,9 +346,9 @@ footer > p{
     nav{
        
 
-        width: 100vw;
+        width: 96vw;
         height: 80px;
-       
+     
       
         
        
@@ -362,11 +360,15 @@ footer > p{
     nav > ul{
 
         
-        width: 100%;
+       
+       width: 400px;
         gap: 20px;
-        margin-right: 520px;
         padding: 10px;
         font-size: 16px;
+        display: flex;
+        margin: auto;
+        
+       
         
     }
     
@@ -376,7 +378,7 @@ footer > p{
         
         list-style-type: none;
         text-decoration: none;
-        width: 100px;
+       
        
         
     }
@@ -394,6 +396,7 @@ footer > p{
         cursor: pointer;
         font-size: 16px;
         font-weight: 600;
+         margin-left: 1px;
         
     }
 
@@ -534,7 +537,7 @@ footer > p{
         width: 650px;
         padding-right: 30px;
         font-weight: 600;
-        margin-top: -70px;
+       
        
     
     }
@@ -562,8 +565,11 @@ footer > p{
     }
     .aboutme > .aboutme-container > .aboutme-right > .skills > img{
         margin-top: 20px;
-        width: 48px;
         height: 54px;
+        
+    width: 53px;
+       
+
     }
     
     .aboutme > .aboutme-container > .aboutme-right > .skills > img#htmlfoto{
