--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,5 +1,3 @@
-
-
 @media screen and (min-width: 768px) and (max-width: 1580px){
 
 
@@ -15,9 +13,9 @@
     nav{
        
 
-        width: 100vw;
+        width: 96vw;
         height: 80px;
-       
+     
       
         
        
@@ -29,11 +27,15 @@
     nav > ul{
 
         
-        width: 100%;
+       
+       
         gap: 20px;
-        margin-right: 520px;
-        padding: 10px;
+        padding: 3px;
         font-size: 16px;
+        display: flex;
+        margin: auto;
+        
+       
         
     }
     
@@ -43,7 +45,7 @@
         
         list-style-type: none;
         text-decoration: none;
-        width: 100px;
+       
        
         
     }
@@ -61,6 +63,8 @@
         cursor: pointer;
         font-size: 16px;
         font-weight: 600;
+         margin-left: 1px;
+         margin-right: 20px;
         
     }
 
@@ -121,6 +125,7 @@
         margin-left: -22px;
         font-size: 16px;
         font-weight: 600;
+      
         
     }
     
@@ -162,7 +167,7 @@
     }
     
     .aboutme > .aboutme-header > h1{
-        font-size: 30px;
+        font-size: 2.5vw;
         font-weight: 600;
     }
     
@@ -186,6 +191,7 @@
         text-align: justify;
         margin-top: 105px;
         justify-content: center;
+       
       
     }
     
@@ -194,6 +200,7 @@
         height: 410px;
         margin-right: 100px;
         border-radius: 8px;
+       
     }
     
     .aboutme > .aboutme-container > .aboutme-right{
@@ -201,13 +208,16 @@
         width: 650px;
         padding-right: 30px;
         font-weight: 600;
-        margin-top: -70px;
+        margin-top: -1.8%;
+      
+        
+       
        
     
     }
     
     .aboutme > .aboutme-container > .aboutme-right > h1{
-        font-size: 35px;
+        font-size: 2.5vw;
         font-weight: 600;
         margin-top: 42px;
         
@@ -226,11 +236,16 @@
         margin-top: 20px;
         text-align: center;
        
+       
     }
     .aboutme > .aboutme-container > .aboutme-right > .skills > img{
         margin-top: 20px;
-        width: 48px;
+       
         height: 54px;
+        
+    width: 50px;
+       
+
     }
     
     .aboutme > .aboutme-container > .aboutme-right > .skills > img#htmlfoto{
@@ -251,7 +266,7 @@
         
         color: white;
         text-align: center;
-        font-size: 35px;
+        font-size: 2.5vw;
         font-weight: 600;
         margin-top: 42px;
         margin-bottom: 40px;
@@ -287,9 +302,440 @@
     
     footer > p{
         color: white;
+        font-size: 12px;
         text-align: center;
         padding: 5px;
     }
+
+    .carreira > .carreira-header > h1{
+        font-size: 2.5vw;
+    }
+
+    .carreira-container{
+       
+   
+       min-width: 650px;
+        font-size: 1.3vw;  
+        
+       
+        
+        
+    }
+
     
+    .carreira-esquerda{
+        margin-right: 20%;
+        margin-left: 0px;
+        
+    }
+    
+    .carreira-esquerda > .quadrados{
+        border: 1px solid #aaaaaa;
+        padding: 8px;
+        border-radius: 8px;
+    }
+    
+    
+    
+    .carreira-container > .carreira-esquerda .quadrados > h1{
+        margin-bottom: 5px;
+       
+    }
+    
+    
+    
+    .carreira-direita > .quadrados > h3{
+        margin-bottom: 8px;
+    }
+    
+     .carreira-direita > .quadrados{
+        min-width: 300px;
+       
+        
+        border: 1px solid #aaaaaa;
+        border-radius: 8px;
+        padding: 8px;
+        margin-bottom: 25px;
+    
+    }
+    
+    .carreira-direita > .quadrados a{
+        color: #F86F03;
+        text-decoration: none;
+    }
+    
+    .carreira-direita > .quadrados a:hover{
+        text-decoration: underline;
+    }
+    
+    
+    
+}
+
+@media  screen and (min-width:320px) and (max-width:767px){
+    
+    nav{
+       
+
+       width: 100vw;
+        height: 50px;
+      
+     
+      
+        
+       
+        
+        
+        
+    }
+    
+    nav > ul{
+
+        
+        width: 50vw;
+        padding: 3px;
+        font-size: 12px;
+        gap: 3vw;
+    
+        
+        
+       
+        
+    }
+
+    nav > ul >.escondido{
+        display: none;
+    }
+    
+    nav > ul > a {
+        
+        
+        
+        list-style-type: none;
+        text-decoration: none;
+       
+       
+        
+    }
+    
+    
+    nav >  a button{
+       
+        border-radius: 20px;
+        width: 100px;
+        height: 30px;
+        color: white;
+        background-color: rgb(34, 34, 201);
+        border: none;
+        text-decoration: none;
+        cursor: pointer;
+        font-size: 12px;
+        font-weight: 600;
+        
+     
+       
+        
+    }
+
+    nav > a button:active{
+        text-decoration: underline;
+    }
+
+    .sec-bg{
+        display: flex;
+        text-align: center;
+       
+        height: 500px;
+        color: white;
+       
+        
+       
+    }
+    
+    .sec-bg > .name{
+        display: flex;
+        flex-direction: column;
+        margin-right: 0px;
+        align-items: center;
+     
+        
+    
+    }
+    
+    .sec-bg > .name > .section-header{
+        font-size: 12px;
+        color:#F86F03;
+        font-weight: 700;
+        
+    }
+    
+    .sec-bg > .name > h1{
+        font-size: 2px;
+        
+        
+    }
+    
+    .sec-bg> .name > .section-header-p{
+        text-align: center;
+        margin-top: 0px;
+       
+        
+      
+        
+    }
+        .sec-bg > .name > a button{
+           
+        width: 100px;
+        height: 35px;
+        background-color: #3E14F5;
+        border: none;
+        color: #fff;
+        border-radius: 20px;
+        margin-top: 0px;
+        margin-left: 0px;
+        font-size: 12px;
+        font-weight: 600;
+      
+        
+    }
+    
+    .sec-bg >.name > a button:active{
+        text-decoration: underline;
+    }
+    
+    
+    .sec-bg > img{
+    
+        width: 200px;
+        border-radius: 50%;
+    }
+    
+    .sec-bg > .name > .redes{
+        margin-top: 12px;
+    }
+    
+    .sec-bg > .name > .redes a img{
+        
+        margin-right: 5px;
+        
+    }
+
+    .aboutme{
+       
+        color: white;
+        width: 100%;
+        height: 650px;
+        
+       
+    }
+    
+    .aboutme > .aboutme-header{
+        text-align: center;
+        color: white;
+        margin-top: 55px;
+        
+    }
+    
+    .aboutme > .aboutme-header > h1{
+        font-size: 2.5vw;
+        font-weight: 600;
+    }
+    
+    .aboutme > .aboutme-header > .hr{
+        width: 205px;
+        margin: auto;
+        margin-top: 10px;
+    }
+    
+    
+    
+    .aboutme > .aboutme-header > h1 span{
+        color: #F86F03;
+        
+    }
+    
+    .aboutme > .aboutme-container{
+    
+        display: flex;
+        height: 100%;
+        text-align: justify;
+        margin-top: 105px;
+        justify-content: center;
+       
+      
+    }
+    
+    .aboutme > .aboutme-container > img{
+        width: 360px;
+        height: 410px;
+        margin-right: 100px;
+        border-radius: 8px;
+       
+    }
+    
+    .aboutme > .aboutme-container > .aboutme-right{
+        text-align: justify;
+        width: 650px;
+        padding-right: 30px;
+        font-weight: 600;
+        margin-top: -1.8%;
+      
+        
+       
+       
+    
+    }
+    
+    .aboutme > .aboutme-container > .aboutme-right > h1{
+        font-size: 2.5vw;
+        font-weight: 600;
+        margin-top: 42px;
+        
+        margin-bottom: 40px;
+    }
+    
+    .aboutme > .aboutme-container > .aboutme-right > .p-right{
+        margin-bottom: 40px;
+        
+    }
+    
+    
+    .aboutme > .aboutme-container > .aboutme-right > .skills{
+     
+        font-size: 20px;
+        margin-top: 20px;
+        text-align: center;
+       
+       
+    }
+    .aboutme > .aboutme-container > .aboutme-right > .skills > img{
+        margin-top: 20px;
+       
+        height: 54px;
+        
+    width: 50px;
+       
+
+    }
+    
+    .aboutme > .aboutme-container > .aboutme-right > .skills > img#htmlfoto{
+       width: 64px;
+       height: 64px;
+    }
+    
+    .portifolio{
+        width:100vw;
+        height: 700px;
+        background-color: #31065A;
+        
+       
+       
+    }
+    
+    .portifolio > .portifolio-header > h1{
+        
+        color: white;
+        text-align: center;
+        font-size: 2.5vw;
+        font-weight: 600;
+        margin-top: 42px;
+        margin-bottom: 40px;
+    }
+    
+    
+    .portifolio > .repositorios{
+      
+        text-align: center;
+      
+        
+    
+    }
+    
+    .portifolio > .repositorios img{
+        
+        width: 19vw;
+        height: 21vh;
+        background-size: cover;
+       
+       
+      
+        
+    
+    }
+    
+    .portifolio > .repositorios img:active{
+        opacity: 90%;
+        transform: scale(1.1);
+        
+        transition-duration: 0.5s;
+    }
+    
+    footer > p{
+        color: white;
+        font-size: 12px;
+        text-align: center;
+        padding: 5px;
+    }
+
+    .carreira > .carreira-header > h1{
+        font-size: 2.5vw;
+    }
+
+    .carreira-container{
+       
+   
+       min-width: 650px;
+        font-size: 1.3vw;  
+        
+       
+        
+        
+    }
+
+    
+    .carreira-esquerda{
+        margin-right: 20%;
+        margin-left: 0px;
+        
+    }
+    
+    .carreira-esquerda > .quadrados{
+        border: 1px solid #aaaaaa;
+        padding: 8px;
+        border-radius: 8px;
+    }
+    
+    
+    
+    .carreira-container > .carreira-esquerda .quadrados > h1{
+        margin-bottom: 5px;
+       
+    }
+    
+    
+    
+    .carreira-direita > .quadrados > h3{
+        margin-bottom: 8px;
+    }
+    
+     .carreira-direita > .quadrados{
+        min-width: 300px;
+       
+        
+        border: 1px solid #aaaaaa;
+        border-radius: 8px;
+        padding: 8px;
+        margin-bottom: 25px;
+    
+    }
+    
+    .carreira-direita > .quadrados a{
+        color: #F86F03;
+        text-decoration: none;
+    }
+    
+    .carreira-direita > .quadrados a:hover{
+        text-decoration: underline;
+    }
     
 }
