--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,19 +1,16 @@
 @media screen and (min-width: 768px) and (max-width: 1580px){
-
-
     
-
     body{
       
         background-color: #170550;
+
        
-        
     }
     
     nav{
        
 
-        width: 96vw;
+        
         height: 80px;
      
       
@@ -29,7 +26,7 @@
         
        
        
-        gap: 20px;
+        gap: 0px;
         padding: 3px;
         font-size: 16px;
         display: flex;
@@ -373,79 +370,30 @@
 }
 
 @media  screen and (min-width:320px) and (max-width:767px){
-    
+   
+    *{
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+
+       
+      
+    }
+
     nav{
        
+       display: none;
+       
+        
+    }
+    
 
-       width: 100vw;
-        height: 50px;
-      
-     
-      
-        
-       
-        
-        
-        
-    }
-    
-    nav > ul{
 
-        
-        width: 50vw;
-        padding: 3px;
-        font-size: 12px;
-        gap: 1vw;
-    
-        
-        
-       
-        
-    }
-
-    nav > ul >.escondido{
-        display: none;
-    }
-    
-    nav > ul > a {
-        
-        
-        
-        list-style-type: none;
-        text-decoration: none;
-       
-       
-        
-    }
-    
-    
-    nav >  a button{
-       
-        border-radius: 20px;
-        width: 100px;
-        height: 30px;
-        color: white;
-        background-color: rgb(34, 34, 201);
-        border: none;
-        text-decoration: none;
-        cursor: pointer;
-        font-size: 12px;
-        font-weight: 600;
-        
-     
-       
-        
-    }
-
-    nav > a button:active{
-        text-decoration: underline;
-    }
 
     .sec-bg{
         display: flex;
         text-align: center;
-       
-        height: 500px;
+        height: 320px;
         color: white;
        
         
@@ -453,24 +401,28 @@
     }
     
     .sec-bg > .name{
+        
         display: flex;
         flex-direction: column;
-        margin-right: 0px;
         align-items: center;
+        margin-right: 5.5vw;
+        
      
         
     
     }
     
     .sec-bg > .name > .section-header{
-        font-size: 12px;
+        font-size: 4.2vw;
         color:#F86F03;
         font-weight: 700;
+       
+        
         
     }
     
     .sec-bg > .name > h1{
-        font-size: 2px;
+        font-size: 3.2vw;
         
         
     }
@@ -478,6 +430,9 @@
     .sec-bg> .name > .section-header-p{
         text-align: center;
         margin-top: 0px;
+        font-size: 12px;
+       
+       
        
         
       
@@ -485,29 +440,30 @@
     }
         .sec-bg > .name > a button{
            
-        width: 100px;
-        height: 35px;
+        width: 80px;
+        height: 30px;
         background-color: #3E14F5;
         border: none;
         color: #fff;
         border-radius: 20px;
-        margin-top: 0px;
+        margin-top: 8px;
         margin-left: 0px;
-        font-size: 12px;
+        font-size: 8px;
         font-weight: 600;
       
         
     }
     
     .sec-bg >.name > a button:active{
-        text-decoration: underline;
+        text-decoration: none;
     }
     
     
     .sec-bg > img{
     
-        width: 200px;
+        width: 110px;
         border-radius: 50%;
+        margin-right: 8px;
     }
     
     .sec-bg > .name > .redes{
@@ -515,7 +471,7 @@
     }
     
     .sec-bg > .name > .redes a img{
-        
+        width: 20px;
         margin-right: 5px;
         
     }
@@ -524,7 +480,10 @@
        
         color: white;
         width: 100%;
-        height: 650px;
+        height: 100%;
+        
+     
+      
         
        
     }
@@ -532,18 +491,20 @@
     .aboutme > .aboutme-header{
         text-align: center;
         color: white;
-        margin-top: 55px;
+        margin-top: 20px;
+       
+        
         
     }
     
     .aboutme > .aboutme-header > h1{
-        font-size: 2.5vw;
+        font-size: 3.2vw;
         font-weight: 600;
     }
     
     .aboutme > .aboutme-header > .hr{
-        width: 205px;
-        margin: auto;
+        width: 120px;
+      
         margin-top: 10px;
     }
     
@@ -557,28 +518,26 @@
     .aboutme > .aboutme-container{
     
         display: flex;
-        height: 100%;
         text-align: justify;
-        margin-top: 105px;
-        justify-content: center;
        
-      
+     
+       
     }
     
     .aboutme > .aboutme-container > img{
-        width: 360px;
-        height: 410px;
-        margin-right: 100px;
+        width: 160px;
+        height: 180px;
+      margin-right: 20px;
         border-radius: 8px;
        
     }
     
     .aboutme > .aboutme-container > .aboutme-right{
         text-align: justify;
-        width: 650px;
-        padding-right: 30px;
+        width: 100px;
+        padding-right: 0px;
         font-weight: 600;
-        margin-top: -1.8%;
+       
       
         
        
@@ -587,33 +546,44 @@
     }
     
     .aboutme > .aboutme-container > .aboutme-right > h1{
-        font-size: 2.5vw;
+        font-size: 8px;
+        min-width: 120px;
         font-weight: 600;
-        margin-top: 42px;
-        
-        margin-bottom: 40px;
+      
+       
+        margin-bottom: 60px;
     }
     
     .aboutme > .aboutme-container > .aboutme-right > .p-right{
-        margin-bottom: 40px;
+        margin-bottom: 70px;
+        
+        font-size: 1.2vw;
+        margin-top: -50px;
         
     }
     
     
     .aboutme > .aboutme-container > .aboutme-right > .skills{
      
-        font-size: 20px;
-        margin-top: 20px;
+        font-size: 8px;
+        margin-top: -55px;
         text-align: center;
+        max-width: 100px;
+        margin-bottom: 20px;
+      
+    
+    
+      
+       
        
        
     }
     .aboutme > .aboutme-container > .aboutme-right > .skills > img{
         margin-top: 20px;
-       
-        height: 54px;
+      
+        height: 20px;
         
-    width: 50px;
+    width: 3.5vw;
        
 
     }
@@ -624,9 +594,11 @@
     }
     
     .portifolio{
-        width:100vw;
-        height: 700px;
+        width:100%;
+        height: 100vh;
         background-color: #31065A;
+        display: flex;
+        flex-direction: column;
         
        
        
@@ -636,7 +608,7 @@
         
         color: white;
         text-align: center;
-        font-size: 2.5vw;
+        font-size: 3.2vw;
         font-weight: 600;
         margin-top: 42px;
         margin-bottom: 40px;
@@ -644,8 +616,9 @@
     
     
     .portifolio > .repositorios{
-      
+     
         text-align: center;
+     
       
         
     
@@ -653,48 +626,45 @@
     
     .portifolio > .repositorios img{
         
-        width: 19vw;
-        height: 21vh;
+        width: 11.5vw;
+        height: 20vh;
         background-size: cover;
-       
-       
       
-        
-    
     }
-    
-    .portifolio > .repositorios img:active{
-        opacity: 90%;
-        transform: scale(1.1);
-        
+
+    .portifolio > .repositorios img{
+       
+        filter: blur(0px);
         transition-duration: 0.5s;
+     
     }
+    
     
     footer > p{
         color: white;
-        font-size: 12px;
+     font-size: 1.2vw;
         text-align: center;
         padding: 5px;
     }
 
     .carreira > .carreira-header > h1{
-        font-size: 2.5vw;
+        font-size: 3.2vw;
     }
 
     .carreira-container{
        
    
-       min-width: 650px;
-        font-size: 1.3vw;  
-        
-       
-        
+       min-width: 200px;
+      
+        font-size: 1.2vw;  
         
     }
 
     
     .carreira-esquerda{
-        margin-right: 20%;
+        min-width: 80px;
+      
+        margin-right: 30%;
         margin-left: 0px;
         
     }
@@ -703,6 +673,7 @@
         border: 1px solid #aaaaaa;
         padding: 8px;
         border-radius: 8px;
+        
     }
     
     
@@ -716,10 +687,12 @@
     
     .carreira-direita > .quadrados > h3{
         margin-bottom: 8px;
+        font-size: 1.4vw;
     }
     
      .carreira-direita > .quadrados{
-        min-width: 300px;
+      min-width: 100px;
+       
        
         
         border: 1px solid #aaaaaa;
@@ -732,10 +705,6 @@
     .carreira-direita > .quadrados a{
         color: #F86F03;
         text-decoration: none;
-    }
-    
-    .carreira-direita > .quadrados a:hover{
-        text-decoration: underline;
     }
     
 }
